--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -147,7 +147,7 @@ message.notEmpty.calculator.glass.amount=Amount is required!
 message.accessDenied.code.label=ERROR CODE
 message.accessDenied.code.text=HTTP 403 Forbidden
 message.accessDenied.description.label=ERROR DESCRIPTION
-message.accessDenied.description.text=Access Denied. You Do Not Have The Permission To Access This Page On This Server
+message.accessDenied.description.text=You Do Not Have The Permission To Access This Page On This Server
 message.accessDenied.footer=HAVE A NICE DAY
 #Not found
 message.notFound.code.text=HTTP 404 NotFound
@@ -273,3 +273,4 @@ message.cart.paymentInfo.header=Payment information
 message.cart.paymentInfo.cardNumber=Card number
 message.cart.paymentInfo.YourName=Card holder name
 message.cart.paymentInfo.Expired=Expired
+message.cart.paymentInfo.failure = Payment information is not filled!
