--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -148,7 +148,7 @@ message.notMatches.customer.phone=Неаерный номер телефона! 
 message.accessDenied.code.label=КОД ОШИБКИ
 message.accessDenied.code.text=HTTP 403 Доступ запрещен
 message.accessDenied.description.label=ОПИСАНИЕ ОШИБКИ
-message.accessDenied.description.text=Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
+message.accessDenied.description.text=Доступ К Данной Странице На Сервере Запрещен.
 message.accessDenied.footer=ХОРОШЕГО ДНЯ
 #Not found
 message.notFound.code.text = HTTP 404 Не найдено
@@ -273,3 +273,4 @@ message.cart.paymentInfo.header=Информация об оплате
 message.cart.paymentInfo.cardNumber=Номер карты
 message.cart.paymentInfo.YourName=Имя владельца карты
 message.cart.paymentInfo.Expired=Срок годности
+message.cart.paymentInfo.failure = Информация об оплате не заполнена!
